fixed font size on mobile

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -123,6 +123,9 @@ roboto
   color: #ffffff;
   min-height: 154px;
 }
+#questionnarie h2 {
+  font-size: 1.1rem;
+}
 
 /* STAGES */
 
@@ -217,20 +220,17 @@ No media query for `xs` since this is the default in Bootstrap */
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-  #questionnarie h2 {
-    font-size: 0.5rem;
-  }
   .item-card {
     max-width: 254px;
     width: 100%;
+  }
+  #questionnarie h2 {
+    font-size: 2rem;
   }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  #questionnarie h2 {
-    font-size: 2rem;
-  }
 }
 
 /* Large devices (desktops, 992px and up) */
